match 4a74322: fix z-index issues on mobile?

--- a/css/scrolly.css
+++ b/css/scrolly.css
@@ -85,7 +85,7 @@ header h1 {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  z-index: -1;
+  z-index: 1;
 }
 
 #image img,
@@ -132,6 +132,8 @@ p {
   flex-wrap: wrap;
   margin-left: -50px;
   background-color: black;
+  position: relative;
+  z-index: 0;
 }
 
 svg {
@@ -175,6 +177,7 @@ svg {
 @media (max-width: 767px) {
   #vizcontainer {
     transform: scale(0.67) translate(-180px, 180px);
+    z-index: 11;
   }
 
   #image {
@@ -182,6 +185,7 @@ svg {
     left: 0em;
     max-height: calc(100% - 7em);
     justify-content: flex-start;
+    z-index: 1;
   }
 
   #viz {
@@ -195,19 +199,21 @@ svg {
   #text div p {
     margin-left: 0px;
     background-color: white;
+    z-index: 10;
+    position: relative;
   }
 
   .intro {
     max-width: 100%;
-    z-index: -1;
+    z-index: 1;
   }
 
   h1 {
-    z-index: -1;
+    z-index: 1;
   }
 
   header {
-    z-index: -1;
+    z-index: 1;
   }
 
   .label {
